comple authorities